--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="overflow-y:scroll!important;">
+<body>
     <app-root></app-root>
 </body>
 </html>
